examples/errors/overflow_int_op.avm
push int8(-49)
push int32(2147483600)

sub ; Oveflow

exit